# exercise_00

./: CMakeLists.txt  README.md  package.xml
launch/: stopline_2021.launch
msg/: VidInfo.msg
src/: exercise_00_pub.cpp  exercise_00_sub.cpp
